# LegionAura

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  legionaura.cpp
devices/: devices.json
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
lib/: CMakeLists.txt  legionaura.cpp  legionaura.h
